--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -4,6 +4,7 @@ menuitem "Mapmodels..."				"showmenu Mapmodels"
 menuitem "Lighting..."				"showmenu Lighting"
 menuitem "Entities..."				"showmenu Entities"
 menuitem "Pickups..."				"showmenu Pickups"
+menuitem "Test a skymap..."			"showmenu skymaps"
 menuitem "Ambient sounds..."			[ showmenu "Ambient sounds" ]
 menuitem "Arches and slopes..."			"showmenu Arches"
 menuitem "Map operations..."			[ showmenu "Map operations" ]
@@ -100,6 +101,18 @@ menuitem "Slope increase 1 top-bottom"		"heightfield 0; slope 0 1"
 menuitem "Slope decrease 1 top-bottom"		"heightfield 0; slope 0 -1"
 menuitem "" -1
 menuitem "Fix heightfielding"                    "solid 0; slope 0 0"
+
+newmenu skymaps
+menuinit [ echo "3Please read: /docs/mapediting5.html to find out how to PERMANENTLY add a custom skymap to your map..." ]
+menuitem "Steini2 skymap"			[ loadsky "textures/skymaps/steini/steini2" ]
+menuitem "Steini3 skymap"			[ loadsky "textures/skymaps/steini/steini3" ]
+menuitem "Steini4 skymap"			[ loadsky "textures/skymaps/steini/steini4" ]
+menuitem "Rocky skymap"				[ loadsky "textures/skymaps/makke/rocky" ]
+menuitem "Mountain skymap"			[ loadsky "textures/skymaps/makke/mountain" ]
+menuitem "Iceflow skymap"			[ loadsky "textures/skymaps/iceflow/iceflow" ]
+menuitem "Inhcanyons1 skymap"			[ loadsky "textures/skymaps/ladynighthawk/inhcanyons1" ]
+menuitem "Nightball skymap"			[ loadsky "textures/skymaps/socksky/nightball" ]
+menuitem "Grave skymap"				[ loadsky "textures/skymaps/socksky/grave" ]
 
 
 //Map operations
