new command: menuinitselection
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4188 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -25,6 +25,7 @@ menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
 menuitem "4Browse servers..."		[ closemenu "In-game"; joinservermenu ]
 menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
+menuinitselection 11
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
 newmenu "In-game admin"
@@ -140,6 +141,7 @@ newmenu "search player"
 
 menuitemtextinput "search nickname:  " "result $lastsearchname" "alias lastsearchname $arg1"
 menuitem "                       [search]" [closemenu "search player"; searchnickname $lastsearchname]
+menuinitselection 1
 
 newmenu voicecom 1 1
 
