mass menu fixes/cleanups
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4191 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -56,7 +56,7 @@ menuitem "Download demos from the server"	[ listdemos; showmenu "Download demo" 
 newmenu "Download demo"
 menuinit [ echo "4Choose the demo number you wish to download, as show below in the console." ]
 menuitemtextinput "Demo number:  "	"" "alias dldemo $arg1"
-menuitem "2	  [ Download ]		" "getdemo $dldemo"
+menuitem "2	      [ Download ]		" "getdemo $dldemo"
 
 
 
@@ -78,6 +78,7 @@ menuitem "" -1
 menuitem "AssaultCube is a total-conversion of the CUBE engine" -1
 menuitem "...by Wouter 'Aardappel' van Oortmerssen, and others." -1
 menuitem "1http://www.cubeengine.com/" -1
+menuinitselection 2
 
 newmenu help
 
@@ -119,8 +120,8 @@ menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hostin
 menuitem "Archangel			Map: ac_urban." -1
 menuitem "Mr.Floppy			Map: ac_keller, plus textures." -1
 menuitem "DogDancing			Map: ac_shine, ac_scaffold, textures." -1
-menuitem "R4zor				Map: ac_sunset." -1
-menuitem "KC				Map: ac_arctic." -1
+menuitem "R4zor				Map: ac_sunset, ac_wasteland, ac_gothic." -1
+menuitem "Halo				Map: ac_arctic, ac_wasteland." -1
 menuitem "" -1
 menuitem "Special thanks" -1
 menuitem "----------------" -1
