--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -27,7 +27,7 @@ newmenu "White light"
 menuitemslider "Light radius: " 1 32 "$wlight" 1 "" "alias wlight $arg1"
 menuitemslider "Brightness: " 1 255 "$wlight1" 5 "" "alias wlight1 $arg1"
 menuitem "" -1
-menuitem "2		[ OK ]		" "newent light $wlight $wlight1"
+menuitem "2		    [ OK ]		" "newent light $wlight $wlight1"
 
 alias clight 1
 alias clight1 1
@@ -42,7 +42,7 @@ menuitemslider "Red light: " 1 255 "$clight1" 5 "" "alias clight1 $arg1"
 menuitemslider "Green light: " 1 255 "$clight2" 5 "" "alias clight2 $arg1"
 menuitemslider "Blue light: " 1 255 "$clight3" 5 "" "alias clight3 $arg1"
 menuitem "" -1
-menuitem "2		[ OK ]" "newent light $clight $clight1 $clight2 $clight3"
+menuitem "2		    [ OK ]" "newent light $clight $clight1 $clight2 $clight3"
 
 //Entities menu
 newmenu Entities
@@ -103,7 +103,7 @@ menuitem "" -1
 menuitem "Fix heightfielding"                    "solid 0; slope 0 0"
 
 newmenu skymaps
-menuinit [ echo "3Please read: /docs/mapediting5.html to find out how to PERMANENTLY add a custom skymap to your map..." ]
+menuinit [ echo "Please read: 3/docs/mapediting5.html to find out how to PERMANENTLY add a custom skymap to your map..." ]
 menuitem "Steini2 skymap"			[ loadsky "textures/skymaps/steini/steini2" ]
 menuitem "Steini3 skymap"			[ loadsky "textures/skymaps/steini/steini3" ]
 menuitem "Steini4 skymap"			[ loadsky "textures/skymaps/steini/steini4" ]
@@ -135,7 +135,7 @@ menuitemslider "Red pigment: " 1 255 "$redw" 5 "" "alias redw $arg1"
 menuitemslider "Green pigment: " 1 255 "$greenw" 5 "" "alias greenw $arg1"
 menuitemslider "Blue pigment: " 1 255 "$bluew" 5 "" "alias bluew $arg1"
 menuitem "" -1
-menuitem "2		   [ OK ]" "watercolour $redw $greenw $bluew"
+menuitem "2		     [ OK ]" "watercolour $redw $greenw $bluew"
 
 //Mapmodels
 newmenu Mapmodels
@@ -390,4 +390,4 @@ menuinit [ alias soundrad 1; alias soundsize 0; alias ambientsoundvol 255 ]
 menuitemslider "Sound radius: " 1 25 "$soundrad" 1 "" "alias soundrad $arg1"
 menuitemslider "Sound size: " 0 25 "$soundsize" 1 "" "alias soundsize $arg1"
 menuitemslider "Sound volume: " 1 255 "$ambientsoundvol" 5 "" "alias ambientsoundvol $arg1"
-menuitem "2		   [ OK ]" "newent sound $ambientsoundmenu $soundrad $soundsize $ambientsoundvol"
+menuitem "2		     [ OK ]" "newent sound $ambientsoundmenu $soundrad $soundsize $ambientsoundvol"
