--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -12,17 +12,17 @@ alias joinservermenu [ searchlan 1
 newmenu "In-game"
 
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
-menuitem "Change to the enemy team"        "changeteam"
-menuitem "Change weapon"        	"showmenu Weapons"
-menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "Change to the enemy team"	"changeteam"
+menuitem "Change weapon..."        	"showmenu Weapons"
+menuitem "Change player skin..."        [showmenu (at [CLA RVSF] (curteam))]
 menuitem "" -1
-menuitem "Set mode/map"			"showmenu Gamemode"
-menuitem "Kick/ban player"		"showmenu kick/ban"
-menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
-menuitem "Download a demo"		[ listdemos; showmenu "Download demo" ]
+menuitem "Set mode/map..."		"showmenu Gamemode"
+menuitem "Kick/ban player..."		"showmenu kick/ban"
+menuitem "Adjust teams..."		[ showmenu "Team adjustment" ]
+menuitem "Download a demo..."		[ listdemos; showmenu "Download demo" ]
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
-menuitem "4Browse servers..."		[ closemenu "In-game"; joinservermenu ]
+menuitem "4Browse servers..."	[ closemenu "In-game"; joinservermenu ]
 menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
 menuinitselection 11
@@ -30,19 +30,19 @@ menuinitselection 11
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
 newmenu "In-game admin"
 
-menuitem "Set mode/map"			"showmenu Gamemode"
-menuitem "Kick/ban player"		"showmenu kick/ban"
-menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
-menuitem "Change mastermode" 		"showmenu Mastermode"
-menuitem "Change the server description" "saycommand /serverdesc "
-menuitem "Find a players IP address"	"saycommand /whois "
-menuitem "Give admin"			[ showmenu "give admin" ]
+menuitem "Set mode/map..."			"showmenu Gamemode"
+menuitem "Kick/ban player..."		"showmenu kick/ban"
+menuitem "Adjust teams..."			[ showmenu "Team adjustment" ]
+menuitem "Change mastermode..." 		"showmenu Mastermode"
+menuitem "Change the server description..." "saycommand /serverdesc "
+menuitem "Find a players IP address..."	"saycommand /whois "
+menuitem "Give admin..."			[ showmenu "give admin" ]
 menuitem "" -1
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
 menuitem "Change to the enemy team"        "changeteam"
-menuitem "Change weapon"        	"showmenu Weapons"
-menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "Demos"			"showmenu Demo"
+menuitem "Change weapon..."        	"showmenu Weapons"
+menuitem "Change player skin..."          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "Demos..."			"showmenu Demo"
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu "In-game admin"; showmenu main ]
 menuitem "4Browse servers..."		[ closemenu "In-game admin"; joinservermenu ]
@@ -67,25 +67,17 @@ menuitemtextinput "Server IP/DNS: 		"	"" "alias cc1 $arg1" "" 255
 menuitemtextinput "Server port (optional): 	"	"" "alias cc2 $arg1" "" 6
 menuitemtextinput "Server password (optional): 	"	"" "alias cc3 $arg1" "" 128
 menuitem "" -1
-menuitem "2		  [ Connect ]			" "connect $cc1 $cc2 $cc3"
+menuitem "2		     [ Connect ]			" "connect $cc1 $cc2 $cc3"
 
 // Connect to a menu as admin.
 newmenu "Admin connect"
 
-menuinit [ alias acc1 ""; alias acc2 ""; alias acc3 ""; echo "3To use this menu to connect as administrator, you will need to know the administrator password for your server." ]	// Resets the aliases
-menuitemtextinput "Server IP/DNS: 		"		"" "alias acc1 $arg1" 
-menuitemtextinput "Server port (optional):	"		"" "alias acc2 $arg1"
-menuitemtextinput "Server admin password: 	"		"" "alias acc3 $arg1"
+menuinit [ alias acc1 ""; alias acc2 ""; alias acc3 ""; echo "3To use this menu to connect as administrator, you will need to know the admin password for your server." ]	// Resets the aliases
+menuitemtextinput "Server IP/DNS: 		"		"" "alias acc1 $arg1" "" 255
+menuitemtextinput "Server port (optional):	"		"" "alias acc2 $arg1" "" 6
+menuitemtextinput "Server admin password: 	"		"" "alias acc3 $arg1" "" 128
 menuitem "" -1
-menuitem "2	      [ Admin connect ]		" "connectadmin $acc1 $acc2 $acc3"
-
-newmenu "Server description"
-
-menuinit [ alias serverdesctext ""; echo "3This will change the server description (in-between the suffixes specified by the server owner) to what you choose for one game only." ]	// Resets the aliases
-menuitemtextinput "Server description: 		"		"" "alias serverdesctext $arg1"   
-menuitem "" -1
-menuitem "2      [ Change server description ]	" "serverdesc $serverdesctext"
-
+menuitem "2		  [ Admin connect ]		" "connectadmin $acc1 $acc2 $acc3"
 
 newmenu kick/ban
 
@@ -127,21 +119,30 @@ menuitem "Turn auto-team off"	"autoteam 0"
 
 newmenu "serverbrowser help"
 
-menuitem "F1: display this help" -1
-menuitem "F3: search player by nickname" [showmenu "search player"]
-menuitem "F5: update serverlist from masterserver" [updatefrommaster 1; closemenu "serverbrowser help"]
-menuitemcheckbox "F6: reverse sort order " "$serversortdir" "serversortdir $arg1"
-menuitemcheckbox "F7: show only good servers" "$showonlygoodservers" "showonlygoodservers $arg1"
-menuitemcheckbox "F8: show minutes remaining" "$showminremain" "showminremain $arg1"
-menuitemslider "Sort servers by: " 0 7 "$serversort" 1 ["ping" "number of players" "max players" "minutes remaining" "map name" "gamemode" "IP address" "description"] "serversort $arg1"
+menuitem "F1: Display this help menu" -1
+menuitem "F3: Search for players by nickname..." [ showmenu "Search for a player" ]
+menuitem "F5: Update the serverlist from the masterserver" [updatefrommaster 1; closemenu "serverbrowser help"]
+menuitemcheckbox "F6: Reverse the sort order:" "$serversortdir" "serversortdir $arg1"
+menuitemcheckbox "F7: Only show good servers:" "$showonlygoodservers" "showonlygoodservers $arg1"
+menuitemcheckbox "F8: Show minutes remaining:" "$showminremain" "showminremain $arg1"
+menuitem "" -1
+menuitemslider "Sort servers by: " 0 7 "$serversort" 1 [ "Ping" "Number of players" "Max players" "Minutes remaining" "Map name" "Gamemode" "IP address" "Server description"] "serversort $arg1"
+menuinitselection 1
 
 alias lastsearchname ""
 
-newmenu "search player"
+newmenu "Search for a player"
 
-menuitemtextinput "search nickname:  " "result $lastsearchname" "alias lastsearchname $arg1"
-menuitem "                       [search]" [closemenu "search player"; searchnickname $lastsearchname]
+menuitemtextinput "Search servers for a player: " "result $lastsearchname" "alias lastsearchname $arg1"
+menuitem "2		       [ Search ]" [ closemenu "Search for a player"; searchnickname $lastsearchname]
 menuinitselection 1
+
+newmenu getmap
+menuitem "      This server is using a different version of this map..." -1
+menuitem "" -1
+menuitem "2    [ Download the servers map version and join the game ]" "getmap"
+menuitem "3 [ Keep the local map version and disconnect from the server ]" [ showmenu ""; disconnect ]
+menuinitselection 2
 
 newmenu voicecom 1 1
 
