--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -198,15 +198,15 @@ menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
 menuitem "" -1
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemtextinput "Mouse sensitivity				" "$sensitivity" "sensitivity $arg1" "" 12
-menuitemtextinput "Sniper-scope sensitivity scale			" "$scopesensscale" "alias scopesensscale $arg1" "" 12
+menuitemtextinput "Mouse sensitivity:					" "$sensitivity" "sensitivity $arg1"
+menuitemtextinput "Sniper-scope sensitivity scale:				" "$scopesensscale" "alias scopesensscale $arg1"
 menuitem "" -1
 menuitem "Reset keybinds to default settings..." [ showmenu "Reset Binds" ]
 
 newmenu "Reset Binds"
 menuinit [ alias resetbindsyes 0 ] // Ensures this menu works correctly.
 menuitemcheckbox "Yes, reset all binds: " "alias resetbindsyes 1" "alias resetbindsyes $arg1" 
-menuitem "2   	  [ Apply! ]		" [ if $resetbindsyes [ resetbinds ] [ showmenu "" ] ] 
+menuitem "2   	   [ Apply! ]		" [ if $resetbindsyes [ resetbinds ] [ showmenu "" ] ] 
 
 
 newmenu video
@@ -291,14 +291,14 @@ menuitem "I don't understand LOD (100+ FPS)" [closemenu "FPS Range"; fpsrange 10
 
 newmenu gameplay
 
-menuitemtextinput "Nickname:			 " "result $curname" "name $arg1"
+menuitemtextinput "Nickname:		" "result $curname" "name $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests" "Full color"] "teamdisplaymode $arg1"
-menuitemslider "Custom player skins: " 0 2 "$hidecustomskins" 1 [ "Always show" "Only show in non-team modes" "Never show" ] "hidecustomskins $arg1"
+menuitemslider "Custom player skins: " 0 2 "$hidecustomskins" 1 [ "Always show" "Show in non-team modes" "Never show" ] "hidecustomskins $arg1"
 menuitem "" -1
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitem "Change to the enemy team" "changeteam"
-menuitem "Change weapon"        "showmenu Weapons"
-menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "Change weapon..."        "showmenu Weapons"
+menuitem "Change player skin..."          [showmenu (at [CLA RVSF] (curteam))]
 
 newmenu Misc
 
