--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -120,7 +120,7 @@ menuitem "Turn auto-team off"	"autoteam 0"
 newmenu "serverbrowser help"
 
 menuitem "F1: Display this help menu" -1
-menuitem "F3: Search for players by nickname..." [ showmenu "Search for a player" ]
+menuitem "F3: Search for players by nickname..." [ showmenu "search player" ]
 menuitem "F5: Update the serverlist from the masterserver" [updatefrommaster 1; closemenu "serverbrowser help"]
 menuitemcheckbox "F6: Reverse the sort order:" "$serversortdir" "serversortdir $arg1"
 menuitemcheckbox "F7: Only show good servers:" "$showonlygoodservers" "showonlygoodservers $arg1"
@@ -131,7 +131,7 @@ menuinitselection 1
 
 alias lastsearchname ""
 
-newmenu "Search for a player"
+newmenu "search player"
 
 menuitemtextinput "Search servers for a player: " "result $lastsearchname" "alias lastsearchname $arg1"
 menuitem "2		       [ Search ]" [ closemenu "Search for a player"; searchnickname $lastsearchname]
