configuration files to allow the map-pack
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4196 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -8,7 +8,7 @@ menuitem "Settings"			"showmenu settings"
 menuitem "Demo"				[ showmenu "Play demo" ]
 menuitem "Editing" 			"showmenu editing"
 menuitem "Help"				"showmenu help"
-menuitem "About"			"showmenu about"
+menuitem "About"			"menu_about"
 menuitem "Quit"				"savequit"
 
 
@@ -28,7 +28,7 @@ alias genmapitems [
 newmenu maps
 // Add maps to the below list to include them in the normal map menu (also for botmaps).
 // Don't add ac_depot_classic to the maps list.
-alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban ac_wasteland"
+alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_douze ac_elevation ac_gothic ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 genmapitems	$defaultmaps
 menuitem	"" -1
 menuitem	"Show all maps..." [ showmenu "all maps" ]
@@ -120,8 +120,8 @@ menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hostin
 menuitem "Archangel			Map: ac_urban." -1
 menuitem "Mr.Floppy			Map: ac_keller, plus textures." -1
 menuitem "DogDancing			Map: ac_shine, ac_scaffold, textures." -1
-menuitem "R4zor				Map: ac_sunset, ac_wasteland, ac_gothic." -1
-menuitem "Halo				Map: ac_arctic, ac_wasteland." -1
+menuitem "R4zor				Map: ac_sunset, ac_gothic." -1
+menuitem "Halo				Map: ac_arctic." -1
 menuitem "" -1
 menuitem "Special thanks" -1
 menuitem "----------------" -1
@@ -182,3 +182,11 @@ exec config/menus_bot.cfg
 exec config/menus_edit.cfg
 exec config/menus_settings.cfg
 exec config/menus_multiplayer.cfg
+
+// Menu-specific stuff for the map-pack.
+exec config/menus_mappack.cfg
+alias menu_about [ if (= $mappackinstalled 0) [ showmenu about ] [ showmenu "Map-pack: About" ] ]
+alias menu_maps [ if (= $mappackinstalled 0) [ showmenu maps ] [ showmenu "Map-pack: Maps" ] ]
+alias menu_maps_flags [ if (= $mappackinstalled 0) [ showmenu maps_flags ] [ showmenu "Map-pack: Flag maps" ] ]
+
+
