--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -31,3 +31,5 @@ alias scopesens [ *f $sensitivity $scopesensscale ]
 //bind lalt "melee"
 
 alias askquit 1
+alias mappackinstalled 0 // By default, map-pack is not installed. This alias is here so that AC doesn't complain.
+			 // When mappack is installed, this changes to 1.
