revert fix... should stay as it was.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4202 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -96,7 +96,7 @@ alias genenemyitems [
 			alias teamsize (div $numplayers 2)
 			alias menutext (concatword $teamsize vs $teamsize)
 		]
-		menuitem $menutext (concat "alias tmp_numbots" $numplayers "; menu_maps")
+		menuitem $menutext (concat "alias tmp_numbots" $numplayers "; showmenu botmaps")
 	]
 ]
 
