--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -196,8 +196,8 @@ menuitemkeyinput "Console output: " toggleconsole
 menuitemkeyinput "Screenshot: "     screenshot
 menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
-menuitem "" -1
-menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
+menuitem "" -1 // Invert mouse is a slider instead of a checkbox so the 2 sensitivity textboxes don't look weird.
+menuitemslider "Invert mouse: " 0 1 "$invmouse" 1 "Disabled Enabled" "invmouse $arg1" 
 menuitemtextinput "Mouse sensitivity:					" "$sensitivity" "sensitivity $arg1"
 menuitemtextinput "Sniper-scope sensitivity scale:				" "$scopesensscale" "alias scopesensscale $arg1"
 menuitem "" -1
@@ -274,12 +274,13 @@ menuitemcheckbox "Dynamic lights: " "$dynlight" "dynlight $arg1"
 menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
 menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
 menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
+menuitem "Enable 0.93 FOV compatiblity..." [ fovcompat; sleep 100 [ fovcompatmenu ] ]
 menuitem "" -1
 menuitem "FPS Range..." [ showmenu "FPS Range" ]
-
-
 menuitem "" -1
 menuitem "2			  [ Apply now! ]				" "resetgl"
+
+alias fovcompatmenu [ showmenu settings; showmenu video; showmenu "Advanced video settings" ]
 
 newmenu "FPS Range"
 
@@ -306,6 +307,7 @@ menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "reducedviolencemode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
+menuitemcheckbox "Auto-screenshot: " "$autoscreenshot" "autoscreenshot $arg1"
 menuitemslider "Console size: " 0 20 "$consize" 1 "" "consize $arg1"
 
 // Reduced game violence mode...
