--- a/ac/config/securemaps.cfg
+++ b/ac/config/securemaps.cfg
@@ -1,11 +1,14 @@
 resetsecuremaps
 securemap ac_arctic
 securemap ac_complex
+securemap ac_douze
 securemap ac_depot
+securemap ac_depot_classic
 securemap ac_desert
 securemap ac_desert2
 securemap ac_desert3
 securemap ac_elevation
+securemap ac_gothic
 securemap ac_keller
 securemap ac_mines
 securemap ac_power
