--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -189,6 +189,7 @@ mapmodel 1 2 0 0 "toca/treetrunk1"		// 130
 // mapmodel 3 1 7 0 "toca/stairs_aqueous/stairs2"
 						// Special stairs platforms with handrails. Specific to ac_aqueous. 
 						// This model requires careful clipping to be used.
+// mapmodel 0 0 0 0 "nocamp"			// No-camping sign, specific to ac_douze.
 
 
 // The skymap for this map. You can change this by commenting the one below, and then uncommenting one of your choosing
@@ -560,6 +561,8 @@ texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
 // texture 0 "./wotwot/urban/electric1_bla.jpg"
 // texture 0 "./openfootage/stonewall_4.jpg"
 // texture 0 "./craig_fortune/crates/light_weathered_desert3.jpg"
+// texture 0 "./makke/douze.jpg"
+// texture 0 "./makke/clayceiling.jpg"
 
 
 mapsoundreset	// Ambient sounds. Leave this command here, or else your sounds will mess up!
