Added autocompletion for /clearents; replaced all spawns in ac_douze; fixed comment in default_map_settings.cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4214 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -10,7 +10,7 @@
 // rename it to be the same file name as your map (but keep the existing ".cfg" extension). DO THIS BEFORE YOU EDIT 
 // ANYTHING, just to be safe!
 
-// If you wish to learn how to use configuration files for you map, read: "docs/mapediting5.xml"
+// If you wish to learn how to use configuration files for you map, read: "docs/mapediting5.html"
 
 // Possible commands that can be used in map configs are:
 // ======================================================
@@ -26,7 +26,7 @@ mapmodelreset 					// Leave this command here, or else your maps config file wil
 						// Mapmodel number:
 						// ---------------
 mapmodel 2 2 0 0 "nothing"			// 0	Use this for clipping off areas/things that players should 
-						//	colide against. See "docs/mapediting5.xml" for more details.
+						//	colide against. See "docs/mapediting5.html" for more details.
 
 mapmodel 4 1 0 0 "comp_bridge"			// 1
 mapmodel 0 7 0 0 "ladder_7x"			// 2
@@ -208,7 +208,7 @@ loadsky "textures/skymaps/steini/steini4"	// Comment this if you want to use a d
 
 
 
-// Alternative texture. See "docs/mapediting5.xml" for more information. 
+// Alternative texture. See "docs/mapediting5.html" for more information. 
 
 loadnotexture 				// Reset to default alternative texture. Comment this if you want to use a 
 					// different one.
