--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -22,6 +22,9 @@ complete demo "demos" dmo
 alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel trigger ladder ctf-flag sound clip"]
 entcomplete newent
 
+alias entclearcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel trigger ladder ctf-flag sound clip"]
+entclearcomplete clearents
+
 // Game mode descriptions...
 gamemodedesc 0 [Team Deathmatch: Find the enemy team and destroy them!]
 gamemodedesc 1 [Co-operative edit: Use this mode to edit maps with others online!]
