added new editing options by stef to the menu; tiny ac_shine fix; changelog
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4224 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -124,6 +124,9 @@ menuitem "Increase mapsize (2x)"		[ mapenlarge; echo "The map size has been incr
 menuitem "Create a map message"			[ saycommand /mapmsg ]
 menuitem "Change waterlevel"			"saycommand /waterlevel "
 menuitem "Change watercolour"			[ showmenu "Water colour" ]
+menuitem "Print entity stats"			"entstats"
+menuitemcheckbox "Show mapmodel clippings: " "$showmodelclipping" "showmodelclipping $arg1"
+
 
 alias redw 1
 alias greenw 1
