made some space
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4227 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/official/ac_shine.cfg
+++ b/ac/packages/maps/official/ac_shine.cfg
@@ -1,7 +1,7 @@
 mapmodelreset
 mapmodel 0 0 0 0 "nothing"
 mapmodel 4 1 0 0 "comp_bridge"
-mapmodel 0 7 0 0 "ladder_7x"   	
+mapmodel 0 7 0 0 "ladder_7x"
 mapmodel 0 8 0 0 "ladder_8x"
 mapmodel 0 10 0 0 "ladder_10x"
 mapmodel 0 11 0 0 "ladder_11x"
@@ -58,61 +58,61 @@ mapmodel 0 0 0 0 "poster"
 mapmodel 1 1 0 0 "aard"
 fogcolour 0x6B572E
 fog 250
-mapmodel 1 3 0 0 "toca/plasmatv"		
-mapmodel 3 7 0 0 "toca/radarconsole"		
-mapmodel 1 7 0 0 "toca/commrack"		
-mapmodel 1 3 0 0 "toca/commrack2"		
-mapmodel 1 0 0 0 "toca/powermeter"		
-mapmodel 0 0 0 0 "nothing"			
-mapmodel 0 0 0 0 "nothing"			
-mapmodel 0 0 0 0 "nothing"			
-mapmodel 1 2 0 0 "toca/trashbag"		
-mapmodel 1 2 0 0 "toca/computer/pc"		
-mapmodel 1 2 0 0 "toca/computer/monkeymou"	
-mapmodel 2 3 0 0 "toca/officedesk"		
-mapmodel 1 2 0 0 "toca/monitor"			
-mapmodel 1 2 0 0 "toca/tv"			
-mapmodel 1 1 0 0 "toca/securitycam/vertmount"	
-mapmodel 1 1 0 0 "toca/securitycam/wallmount"	
-mapmodel 1 1 0 0 "toca/securitycam/secucam"	
-mapmodel 4 1 0 0 "bridge_shine"		
-mapmodel 0 0 0 0 "nothing"		
-mapmodel 0 0 0 0 "toca/guardrail"		
-mapmodel 1 3 0 0 "nothing"		
-mapmodel 1 4 0 0 "toca/guardrail2"		
-mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	
-mapmodel 2 1 0 0 "toca/tyre"			
-mapmodel 1 3 0 0 "toca/wheel"			
-mapmodel 3 3 0 0 "toca/utilitytable"		
-mapmodel 1 1 0 0 "toca/milkcarton"		
-mapmodel 0 0 0 0 "toca/bullet"			
-mapmodel 0 0 0 0 "toca/sgshell"			
-mapmodel 1 4 0 0 "nothing"			
-mapmodel 0 0 0 0 "nothing"			
-mapmodel 1 3 0 0 "toca/trashcan"		
-mapmodel 1 5 0 0 "toca/signs/target"		
-mapmodel 0 0 0 0 "toca/signs/toxic"		
-mapmodel 0 0 0 0 "toca/signs/radioactive"	
-mapmodel 0 0 0 0 "toca/signs/biohazard"		
-mapmodel 0 0 0 0 "toca/signs/restricted"		
-mapmodel 0 0 0 0 "toca/signs/firstaid"		
-mapmodel 0 0 0 0 "toca/signs/noentry"		
-mapmodel 0 0 0 0 "toca/signs/nosmoking"		
-mapmodel 0 0 0 0 "toca/signs/donotenter"	
-mapmodel 0 0 0 0 "toca/signs/chemical"		
-mapmodel 0 0 0 0 "toca/signs/confined"		
-mapmodel 0 0 0 0 "toca/signs/explosives"	
-mapmodel 4 1 0 0 "toca/platformmet"		
-mapmodel 4 1 7 0 "toca/stairs1"			
-mapmodel 4 1 7 0 "toca/stairs2"			
-mapmodel 0 0 0 0 "nothing"			
-mapmodel 1 1 0 0 "toca/cinderblock"		
-mapmodel 1 8 0 0 "toca/corrugated/fence1"	
-mapmodel 1 8 0 0 "toca/corrugated/fence2"	
-mapmodel 1 8 0 0 "toca/corrugated/beam"		
-mapmodel 2 6 0 0 "toca/rack"			
-mapmodel 2 2 0 0 "toca/airconditioner"		
-mapmodel 2 2 0 0 "toca/airconditioner/interior"	
+mapmodel 1 3 0 0 "toca/plasmatv"
+mapmodel 3 7 0 0 "toca/radarconsole"
+mapmodel 1 7 0 0 "toca/commrack"
+mapmodel 1 3 0 0 "toca/commrack2"
+mapmodel 1 0 0 0 "toca/powermeter"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 1 2 0 0 "toca/trashbag"
+mapmodel 1 2 0 0 "toca/computer/pc"
+mapmodel 1 2 0 0 "toca/computer/monkeymou"
+mapmodel 2 3 0 0 "toca/officedesk"
+mapmodel 1 2 0 0 "toca/monitor"
+mapmodel 1 2 0 0 "toca/tv"
+mapmodel 1 1 0 0 "toca/securitycam/vertmount"
+mapmodel 1 1 0 0 "toca/securitycam/wallmount"
+mapmodel 1 1 0 0 "toca/securitycam/secucam"
+mapmodel 4 1 0 0 "bridge_shine"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 0 0 0 0 "toca/guardrail"
+mapmodel 1 3 0 0 "nothing"
+mapmodel 1 4 0 0 "toca/guardrail2"
+mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"
+mapmodel 2 1 0 0 "toca/tyre"
+mapmodel 1 3 0 0 "toca/wheel"
+mapmodel 3 3 0 0 "toca/utilitytable"
+mapmodel 1 1 0 0 "toca/milkcarton"
+mapmodel 0 0 0 0 "toca/bullet"
+mapmodel 0 0 0 0 "toca/sgshell"
+mapmodel 1 4 0 0 "nothing"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 1 3 0 0 "toca/trashcan"
+mapmodel 1 5 0 0 "toca/signs/target"
+mapmodel 0 0 0 0 "toca/signs/toxic"
+mapmodel 0 0 0 0 "toca/signs/radioactive"
+mapmodel 0 0 0 0 "toca/signs/biohazard"
+mapmodel 0 0 0 0 "toca/signs/restricted"
+mapmodel 0 0 0 0 "toca/signs/firstaid"
+mapmodel 0 0 0 0 "toca/signs/noentry"
+mapmodel 0 0 0 0 "toca/signs/nosmoking"
+mapmodel 0 0 0 0 "toca/signs/donotenter"
+mapmodel 0 0 0 0 "toca/signs/chemical"
+mapmodel 0 0 0 0 "toca/signs/confined"
+mapmodel 0 0 0 0 "toca/signs/explosives"
+mapmodel 4 1 0 0 "toca/platformmet"
+mapmodel 4 1 7 0 "toca/stairs1"
+mapmodel 4 1 7 0 "toca/stairs2"
+mapmodel 0 0 0 0 "nothing"
+mapmodel 1 1 0 0 "toca/cinderblock"
+mapmodel 1 8 0 0 "toca/corrugated/fence1"
+mapmodel 1 8 0 0 "toca/corrugated/fence2"
+mapmodel 1 8 0 0 "toca/corrugated/beam"
+mapmodel 2 6 0 0 "toca/rack"
+mapmodel 2 2 0 0 "toca/airconditioner"
+mapmodel 2 2 0 0 "toca/airconditioner/interior"
 mapmodel 1 24 0 0 "fence"
 mapmodel 1 24 0 0 "fencepost"
 mapmodel 1 24 0 0 "fencegate_closed"
@@ -367,7 +367,7 @@ texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"
-texture 0 "./dog/texture08.jpg"	
+texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
@@ -375,50 +375,48 @@ texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture08.jpg"
 texture 0 "./dog/texture09.jpg"
-
-// Ambient Sounds
 mapsoundreset
-mapsound "./ambience/cavedrip.ogg" -1		//0
-mapsound "./ambience/distant_cars.ogg" -1	// 1
-mapsound "./ambience/hum01.ogg" -1		// 2
-mapsound "./ambience/hum02.ogg" -1		// 3
-mapsound "./ambience/night_crickets.ogg" -1	// 4
-mapsound "./ambience/water.ogg" -1		// 5
-mapsound "./ambience/wind.ogg" -1		// 6
-mapsound "./ambience/t_aircond.ogg" -1		// 7
-mapsound "./ambience/t_compressor.ogg" -1	// 8
-mapsound "./ambience/t_crow.ogg" -1		// 9
-mapsound "./ambience/t_dogs01.ogg" -1		// 10
-mapsound "./ambience/t_helicopter.ogg" -1	// 11
-mapsound "./ambience/t_hum01.ogg" -1		// 12
-mapsound "./ambience/t_hum02.ogg" -1		// 13
-mapsound "./ambience/t_hum03.ogg" -1		// 14
-mapsound "./ambience/t_hum04.ogg" -1		// 15
-mapsound "./ambience/t_night_dog.ogg" -1	// 16
-mapsound "./ambience/t_night01.ogg" -1		// 17
-mapsound "./ambience/t_night02.ogg" -1		// 18
-mapsound "./ambience/t_radio_comms.ogg" -1	// 19
-mapsound "./ambience/t_radio_static.ogg" -1	// 20
-mapsound "./ambience/t_satcoms.ogg" -1		// 21
-mapsound "./ambience/t_sludge.ogg" -1		// 22
-mapsound "./ambience/t_static01.ogg" -1		// 23
-mapsound "./ambience/t_static02.ogg" -1		// 24
-mapsound "./ambience/t_vent01.ogg" -1		// 25
-mapsound "./ambience/t_vent02.ogg" -1		// 26
-mapsound "./ambience/t_water_owl.ogg" -1	// 27
-mapsound "./ambience/t_water01.ogg" -1		// 28
-mapsound "./ambience/t_waterdrip.ogg" -1	// 29
-mapsound "./ambience/t_wind.ogg" -1		// 30
-mapsound "./ambience/t_waterpipe01.ogg" -1	// 31
-mapsound "./ambience/t_waterpipe02.ogg" -1	// 32
-mapsound "./ambience/warningalarm01.ogg" -1	// 33
-mapsound "./ambience/t_gastank.ogg" -1		// 34
-mapsound "./ambience/t_keyboard.ogg" 1		// 35 - For use with computer/keyboard mapmodels.
-mapsound "./ambience/t_factory01.ogg" -1	// 36
-mapsound "./ambience/t_vents.ogg" -1		// 37
-mapsound "./ambience/t_waterfront.ogg" -1	// 38
-mapsound "./ambience/t_generator.ogg" -1	// 39
-mapsound "./ambience/t_electricbuzz.ogg" -1	// 40
-mapsound "./ambience/t_alarm01.ogg" -1		// 41
-mapsound "./ambience/flies.ogg" -1	        //42
-mapsound "./ambience/deserthawk.ogg" -1     //43 
+mapsound "./ambience/cavedrip.ogg" -1
+mapsound "./ambience/distant_cars.ogg" -1
+mapsound "./ambience/hum01.ogg" -1
+mapsound "./ambience/hum02.ogg" -1
+mapsound "./ambience/night_crickets.ogg" -1
+mapsound "./ambience/water.ogg" -1
+mapsound "./ambience/wind.ogg" -1
+mapsound "./ambience/t_aircond.ogg" -1
+mapsound "./ambience/t_compressor.ogg" -1
+mapsound "./ambience/t_crow.ogg" -1
+mapsound "./ambience/t_dogs01.ogg" -1
+mapsound "./ambience/t_helicopter.ogg" -1
+mapsound "./ambience/t_hum01.ogg" -1
+mapsound "./ambience/t_hum02.ogg" -1
+mapsound "./ambience/t_hum03.ogg" -1
+mapsound "./ambience/t_hum04.ogg" -1
+mapsound "./ambience/t_night_dog.ogg" -1
+mapsound "./ambience/t_night01.ogg" -1
+mapsound "./ambience/t_night02.ogg" -1
+mapsound "./ambience/t_radio_comms.ogg" -1
+mapsound "./ambience/t_radio_static.ogg" -1
+mapsound "./ambience/t_satcoms.ogg" -1
+mapsound "./ambience/t_sludge.ogg" -1
+mapsound "./ambience/t_static01.ogg" -1
+mapsound "./ambience/t_static02.ogg" -1
+mapsound "./ambience/t_vent01.ogg" -1
+mapsound "./ambience/t_vent02.ogg" -1
+mapsound "./ambience/t_water_owl.ogg" -1
+mapsound "./ambience/t_water01.ogg" -1
+mapsound "./ambience/t_waterdrip.ogg" -1
+mapsound "./ambience/t_wind.ogg" -1
+mapsound "./ambience/t_waterpipe01.ogg" -1
+mapsound "./ambience/t_waterpipe02.ogg" -1
+mapsound "./ambience/warningalarm01.ogg" -1
+mapsound "./ambience/t_gastank.ogg" -1
+mapsound "./ambience/t_keyboard.ogg" 1
+mapsound "./ambience/t_factory01.ogg" -1
+mapsound "./ambience/t_vents.ogg" -1
+mapsound "./ambience/t_waterfront.ogg" -1
+mapsound "./ambience/t_generator.ogg" -1
+mapsound "./ambience/t_electricbuzz.ogg" -1
+mapsound "./ambience/t_alarm01.ogg" -1
+mapsound "./ambience/flies.ogg" -1
+mapsound "./ambience/deserthawk.ogg" -1
