--- a/ac/packages/maps/official/ac_power.cfg
+++ b/ac/packages/maps/official/ac_power.cfg
@@ -66,13 +66,13 @@ mapmodel 0 0 0 0 "wires/2x8"
 mapmodel 0 0 0 0 "wires/4x8a"
 mapmodel 0 0 0 0 "wires/4x8"
 mapmodel 0 8 0 0 "drainpipe"
-mapmodel 1 8 0 0 "nothing"	
-mapmodel 1 7 0 0 "toca/commrack"		
-mapmodel 1 3 0 0 "toca/commrack2"		
-mapmodel 0 0 0 0 "toca/monitor"		
-mapmodel 1 2 0 0 "toca/trashbag"		
-mapmodel 1 1 0 0 "toca/milkcarton"		
-mapmodel 1 7 0 0 "toca/commrack"		
+mapmodel 1 8 0 0 "nothing"
+mapmodel 1 7 0 0 "toca/commrack"
+mapmodel 1 3 0 0 "toca/commrack2"
+mapmodel 0 0 0 0 "toca/monitor"
+mapmodel 1 2 0 0 "toca/trashbag"
+mapmodel 1 1 0 0 "toca/milkcarton"
+mapmodel 1 7 0 0 "toca/commrack"
 mapmodel 1 4 0 0 "toca/guardrail2"
 mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"
 mapmodel 1 4 0 0 "nothing"
@@ -87,7 +87,7 @@ texture 0 "./arcitool/archibrick04.jpg"
 texture 0 "./arcitool/archibrick05.jpg"
 texture 0 "./arcitool/archibrick06.jpg"
 texture 0 "./arcitool/archibrick07.jpg"
-texture 0 "./arcitool/rohbaubims.jpg"	
+texture 0 "./arcitool/rohbaubims.jpg"
 texture 0 "./mitaman/grsites/brick051.jpg"
 texture 0 "./mitaman/grsites/brick065.jpg"
 texture 0 "./boeck/stone_022.jpg"
@@ -97,7 +97,7 @@ texture 0 "./makke/bricks_2.jpg"
 texture 0 "./makke/bricks_3.jpg"
 texture 0 "./makke/brickwall.jpg"
 texture 0 "./noctua/wall/brick02.jpg"
-texture 0 "./sub/brick_wall_08.jpg"		
+texture 0 "./sub/brick_wall_08.jpg"
 texture 0 "./sub/brick_wall_09.jpg"
 texture 0 "./makke/bricky.jpg"
 texture 0 "./makke/01-CMU.jpg"
@@ -108,7 +108,7 @@ texture 0 "./mitaman/3dcafe/stone18.jpg"
 texture 0 "./noctua/tiles/16tile12.jpg"
 texture 0 "./noctua/tiles/16tile09.jpg"
 texture 0 "./noctua/tiles/16tile10.jpg"
-texture 0 "./noctua/tiles/16tile11.jpg"	
+texture 0 "./noctua/tiles/16tile11.jpg"
 texture 0 "./noctua/tiles/16tile07.jpg"
 texture 0 "./arcitool/Cotta1-grau.jpg"
 texture 0 "./arcitool/Cotta1-graubraun.jpg"
@@ -118,7 +118,7 @@ texture 0 "./arcitool/Cotta2-beige.jpg"
 texture 0 "./arcitool/Cotta2-dunkel.jpg"
 texture 0 "./arcitool/Cotta2-grau.jpg"
 texture 0 "./arcitool/Cotta2-satt.jpg"
-texture 0 "./makke/tiles.jpg"			
+texture 0 "./makke/tiles.jpg"
 texture 0 "./noctua/ground/cobbles01.jpg"
 texture 0 "./arcitool/pflaster2.jpg"
 texture 0 "./arcitool/gittersteine2.jpg"
@@ -128,7 +128,7 @@ texture 0 "./makke/br_tiles.jpg"
 texture 0 "./makke/c_tile.jpg"
 texture 0 "./makke/pebbles_01.jpg"
 texture 0 "./arcitool/sisal21.jpg"
-texture 0 "./makke/platten.jpg"		
+texture 0 "./makke/platten.jpg"
 texture 0 "./noctua/ground/asph01.jpg"
 texture 0 "./noctua/ground/asph02.jpg"
 texture 0 "./noctua/ground/asph03.jpg"
@@ -137,7 +137,7 @@ texture 0 "./DigitalFlux/dirty_asphalt_02.jpg"
 texture 0 "./DigitalFlux/dirty_asphalt_03.jpg"
 texture 0 "./makke/concrete.jpg"
 texture 0 "./makke/concrete_trim.jpg"
-texture 0 "./makke/concrete_trim_small.jpg"	
+texture 0 "./makke/concrete_trim_small.jpg"
 texture 0 "./noctua/ground/snowy03.jpg"
 texture 0 "./noctua/ground/snowy04.jpg"
 texture 0 "./noctua/ground/snowy05.jpg"
@@ -147,7 +147,7 @@ texture 0 "./noctua/metal/iron01.jpg"
 texture 0 "./noctua/metal/zinc02.jpg"
 texture 0 "./noctua/metal/zinc03.jpg"
 texture 0 "./noctua/wall/plast02.jpg"
-texture 0 "./noctua/wall/conc01.jpg"		
+texture 0 "./noctua/wall/conc01.jpg"
 texture 0 "./noctua/wall/conc02.jpg"
 texture 0 "./noctua/wall/conc05.jpg"
 texture 0 "./noctua/wall/wall02.jpg"
@@ -157,7 +157,7 @@ texture 0 "./noctua/ground/snowy02.jpg"
 texture 0 "./boeck/stone_013.jpg"
 texture 0 "./boeck/stone_014.jpg"
 texture 0 "./noctua/wall/plast01.jpg"
-texture 0 "./noctua/wall/plast03.jpg"	
+texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
 texture 0 "./mitaman/various/027metal.jpg"
@@ -294,49 +294,48 @@ texture 0 "./wotwot/skin/milkcarton.jpg"
 texture 0 "./wotwot/skin/guardrail2.jpg"
 texture 0 "./wotwot/skin/monitor.jpg"
 texture 0 "./wotwot/skin/commrack.jpg"
-
 mapsoundreset
-mapsound "./ambience/cavedrip.ogg" -1		//0
-mapsound "./ambience/distant_cars.ogg" -1	// 1
-mapsound "./ambience/hum01.ogg" -1		// 2
-mapsound "./ambience/hum02.ogg" -1		// 3
-mapsound "./ambience/night_crickets.ogg" -1	// 4
-mapsound "./ambience/water.ogg" -1		// 5
-mapsound "./ambience/wind.ogg" -1		// 6
-mapsound "./ambience/t_aircond.ogg" -1		// 7
-mapsound "./ambience/t_compressor.ogg" -1	// 8
-mapsound "./ambience/t_crow.ogg" -1		// 9
-mapsound "./ambience/t_dogs01.ogg" -1		// 10
-mapsound "./ambience/t_helicopter.ogg" -1	// 11
-mapsound "./ambience/t_hum01.ogg" -1		// 12
-mapsound "./ambience/t_hum02.ogg" -1		// 13
-mapsound "./ambience/t_hum03.ogg" -1		// 14
-mapsound "./ambience/t_hum04.ogg" -1		// 15
-mapsound "./ambience/t_night_dog.ogg" -1	// 16
-mapsound "./ambience/t_night01.ogg" -1		// 17
-mapsound "./ambience/t_night02.ogg" -1		// 18
-mapsound "./ambience/t_radio_comms.ogg" -1	// 19
-mapsound "./ambience/t_radio_static.ogg" -1	// 20
-mapsound "./ambience/t_satcoms.ogg" -1		// 21
-mapsound "./ambience/t_sludge.ogg" -1		// 22
-mapsound "./ambience/t_static01.ogg" -1		// 23
-mapsound "./ambience/t_static02.ogg" -1		// 24
-mapsound "./ambience/t_vent01.ogg" -1		// 25
-mapsound "./ambience/t_vent02.ogg" -1		// 26
-mapsound "./ambience/t_water_owl.ogg" -1	// 27
-mapsound "./ambience/t_water01.ogg" -1		// 28
-mapsound "./ambience/t_waterdrip.ogg" -1	// 29
-mapsound "./ambience/t_wind.ogg" -1		// 30
-mapsound "./ambience/t_waterpipe01.ogg" -1	// 31
-mapsound "./ambience/t_waterpipe02.ogg" -1	// 32
-mapsound "./ambience/warningalarm01.ogg" -1	// 33
-mapsound "./ambience/t_gastank.ogg" -1		// 34
-mapsound "./ambience/t_keyboard.ogg" 1		// 35 - For use with computer/keyboard mapmodels.
-mapsound "./ambience/t_factory01.ogg" -1	// 36
-mapsound "./ambience/t_vents.ogg" -1		// 37
-mapsound "./ambience/t_waterfront.ogg" -1	// 38
-mapsound "./ambience/t_generator.ogg" -1	// 39
-mapsound "./ambience/t_electricbuzz.ogg" -1	// 40
-mapsound "./ambience/t_alarm01.ogg" -1		// 41
-mapsound "./ambience/flies.ogg" -1	        //42
-mapsound "./ambience/deserthawk.ogg" -1     //43 
+mapsound "./ambience/cavedrip.ogg" -1
+mapsound "./ambience/distant_cars.ogg" -1
+mapsound "./ambience/hum01.ogg" -1
+mapsound "./ambience/hum02.ogg" -1
+mapsound "./ambience/night_crickets.ogg" -1
+mapsound "./ambience/water.ogg" -1
+mapsound "./ambience/wind.ogg" -1
+mapsound "./ambience/t_aircond.ogg" -1
+mapsound "./ambience/t_compressor.ogg" -1
+mapsound "./ambience/t_crow.ogg" -1
+mapsound "./ambience/t_dogs01.ogg" -1
+mapsound "./ambience/t_helicopter.ogg" -1
+mapsound "./ambience/t_hum01.ogg" -1
+mapsound "./ambience/t_hum02.ogg" -1
+mapsound "./ambience/t_hum03.ogg" -1
+mapsound "./ambience/t_hum04.ogg" -1
+mapsound "./ambience/t_night_dog.ogg" -1
+mapsound "./ambience/t_night01.ogg" -1
+mapsound "./ambience/t_night02.ogg" -1
+mapsound "./ambience/t_radio_comms.ogg" -1
+mapsound "./ambience/t_radio_static.ogg" -1
+mapsound "./ambience/t_satcoms.ogg" -1
+mapsound "./ambience/t_sludge.ogg" -1
+mapsound "./ambience/t_static01.ogg" -1
+mapsound "./ambience/t_static02.ogg" -1
+mapsound "./ambience/t_vent01.ogg" -1
+mapsound "./ambience/t_vent02.ogg" -1
+mapsound "./ambience/t_water_owl.ogg" -1
+mapsound "./ambience/t_water01.ogg" -1
+mapsound "./ambience/t_waterdrip.ogg" -1
+mapsound "./ambience/t_wind.ogg" -1
+mapsound "./ambience/t_waterpipe01.ogg" -1
+mapsound "./ambience/t_waterpipe02.ogg" -1
+mapsound "./ambience/warningalarm01.ogg" -1
+mapsound "./ambience/t_gastank.ogg" -1
+mapsound "./ambience/t_keyboard.ogg" 1
+mapsound "./ambience/t_factory01.ogg" -1
+mapsound "./ambience/t_vents.ogg" -1
+mapsound "./ambience/t_waterfront.ogg" -1
+mapsound "./ambience/t_generator.ogg" -1
+mapsound "./ambience/t_electricbuzz.ogg" -1
+mapsound "./ambience/t_alarm01.ogg" -1
+mapsound "./ambience/flies.ogg" -1
+mapsound "./ambience/deserthawk.ogg" -1
