--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -22,6 +22,7 @@ complete demo "demos" dmo
 alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel trigger ladder ctf-flag sound clip"]
 entcomplete newent
 entcomplete clearents
+entcomplete closestenttype
 
 // Game mode descriptions...
 gamemodedesc 0 [Team Deathmatch: Find the enemy team and destroy them!]
