Edit/create mapmessage menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4235 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -121,11 +121,24 @@ newmenu "Map operations"
 menuitem "Newmap (128x128 cubes - recommended)"	"newmap 7"
 menuitem "Newmap (256x256 cubes)"		"newmap 8"
 menuitem "Increase mapsize (2x)"		[ mapenlarge; echo "The map size has been increased by 2. However, the new space is solid. To utilize it, you will need to turn it into space, by selecting it and pressing G" ]
-menuitem "Create a map message"			[ saycommand /mapmsg ]
+menuitem "Create/edit a map message"		"menumapmsg"
 menuitem "Change waterlevel"			"saycommand /waterlevel "
 menuitem "Change watercolour"			[ showmenu "Water colour" ]
 menuitem "Print entity stats"			"entstats"
 menuitemcheckbox "Show mapmodel clippings: " "$showmodelclipping" "showmodelclipping $arg1"
+
+// Map-message edit/creation menu
+alias menumapmsg [ if (= (strcmp (getmapmsg) "Untitled Map by Unknown") 1) [ showmenu "Create a map message" ] [ showmenu "Edit a map message" ] ]
+
+newmenu "Create a map message"
+menuinit [ alias menumapmsgtext "" ]
+menuitemtextinput "Enter your map message: "		"" "alias menumapmsgtext $arg1" "" 256
+menuitem "2			[ OK ]"			"mapmsg $menumapmsgtext"
+
+newmenu "Edit a map message"
+menuinit [ alias menumapmsgtext "" ]
+menuitemtextinput "Edit your map message: "	"(getmapmsg)"	"alias menumapmsgtext $arg1" "" 256
+menuitem "2		      [ OK ]"			"mapmsg $menumapmsgtext"
 
 
 alias redw 1
