--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -8,7 +8,7 @@ alias editent [
     ]
 ]
 
-alias editmapmsg [ saycommand ( concatword [/mapmsg ] "[" (getmapmsg) "]" ) ]
+alias editmapmsg [ saycommand ( concatword [/mapmsg ] ["] (getmapmsg) ["] ) ]
 
 // Auto-completions
 alias mapcomplete [complete $arg1 "packages/maps/official packages/maps" cgz]
