fix mapmsg menu fix
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4238 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -137,7 +137,7 @@ menuitem "2			[ OK ]"			"mapmsg $menumapmsgtext"
 
 newmenu "Edit a map message"
 menuinit [ alias menumapmsgtext "" ]
-menuitemtextinput "Edit your map message: "	"result (getmapmsg)"	"alias menumapmsgtext $arg1" "" 256
+menuitemtextinput "Edit your map message: "	"getmapmsg"	"alias menumapmsgtext $arg1" "" 256
 menuitem "2		      [ OK ]"			"mapmsg $menumapmsgtext"
 
 
