convenient moving of map entities
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@4240 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -64,7 +64,7 @@ bind I "heightfield 2"
 bind J ""
 bind K "corner"
 bind L [ if $editing [ showmenu Lighting ] ]
-bind M ""
+bind M [ if $editing [ domodifier 6 ] ]
 bind N ""
 bind O "editheight 2 -1"
 bind P "editheight 2 1"
