--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -130,6 +130,7 @@ alias delta_edit_2 [ edittex $flrceil $arg1 ]					// Change floor/ceiling textur
 alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]				// Change wall/upper-wall textures...
 alias delta_edit_4 [ equalize $flrceil ]					// Equalize floor/ceiling...
 alias delta_edit_5 [ entproperty 0 $arg1 ]					// Changes the frist value on entities...
+alias delta_edit_6 [ entproperty $editaxis $arg1 ]				// Move map entity...
 
 // HUD toggles
 alias toggleshowmap [ showmap 1; onrelease [ showmap 0 ] ]
